--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
-    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
